<resources>
    <string name="app_name">SIMLAB</string>
    <string name="tv_login">LOGIN</string>
    <string name="tv_sistem_informasi_manajemen_lab">Sistem Informasi Manajemen Lab</string>
    <string name="tv_silahkan_isi_email_nip_nim">Silahkan Isi Email / NIP / NIM</string>
    <string name="tv_silahkan_isi_password">Silahkan Isi Password</string>
    <string name="select_pilih_tipe_pengguna">Pilih Tipe Pengguna</string>
    <string name="btn_masuk">Masuk</string>
    <string name="tv_pengunjung_belum_punya_akun_buat_akun">Pengunjung Belum Punya Akun? Buat Akun</string>
    <string name="tv_register">REGISTER</string>
    <string name="title_activity_beranda">BerandaActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="tv_nama_user">Nama User</string>
</resources>